# r1-cli

./: .gitignore  README.md  TGI.md  VLLM.md  pyproject.toml
src/r1/: main.py  proxy.py  silent_thought.py  silent_thought_streamer.py  silent_thought_streamer_with_retries.py  silent_thought_vllm.py
