[project]
name = "r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "argh>=0.31.3",
    "bitsandbytes>=0.45.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
]

[project.scripts]
r1 = "r1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
