[project]
name = "r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "argh>=0.31.3",
    "bitsandbytes>=0.45.0",
    "fastapi>=0.115.6",
    "hftorchcache>=0.0.1",
    "outlines[transformers]>=0.1.11",
    "pysnooper>=1.2.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
    "vllm>=0.6.6.post1",
]

[project.scripts]
r1 = "r1:main"
silencio = "r1:silent_thought_streamer.main"
silencio_vllm = "r1:silent_thought_vllm.main"
silencio_multi = "r1:silent_thought_streamer_with_retries.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
